<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/scrolling_activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_stars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/rating"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="4.5"
                android:textColor="@color/colorPrimary"
                 />

            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"
                android:transformPivotX="0dp"
                android:transformPivotY="33dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/address_title"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/address"
                android:textColor="@color/bold_username" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_distance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/distance_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDistancee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/distance_in_kms"
                android:textColor="@color/bold_username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_contact_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/contact_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/contact_number"
                android:textColor="@color/bold_username" />

            <com.etsy.android.grid.util.DynamicHeightImageView
                android:id="@+id/ivCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/logoYellow"
                android:layout_marginLeft="16dp"
                android:padding="12dp"
                android:src="@drawable/ic_phone_call"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_review" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/review_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/reviews"
                android:textColor="@color/bold_username" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="@string/BANNER_AD_UNIT_ID_TWO"></com.google.android.gms.ads.AdView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="360dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:background="@color/logoYellow"
                android:src="@drawable/navigation_icon"
                app:backgroundTint="@color/colorPrimary"
                app:elevation="12dp"
                app:fabSize="auto"
                app:layout_anchorGravity="bottom|end"
                app:rippleColor="@color/tab_unselected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/local_guide_taiwan_2020"
                android:textColor="@color/colorPrimary"
                 />
        </RelativeLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
